# SIHP-IntelRisk

./: CHANGELOG.md  Dockerfile  README.md  agent_benchmark_results_fixed.json  docker-compose.yml  mock_server.py  pyproject.toml  requirements.txt  start-dev.sh
.github/workflows/: deploy-orchestrator.yml  test-analyser.yml  test-checker.yml  test-detecter.yml  test-extractor.yml  test-models.yml  test-schema.yml
Back-End/: package.json
Back-End/src/: server.ts
Front-End/: index.html  package-lock.json  package.json
Front-End/src/: App.tsx
benchmarks/: benchmark_agents.py  benchmark_analyser.py  benchmark_checker.py  benchmark_detecter.py  benchmark_extractor.py
docs/: ADR-001-analyser-design.md  ADR-002-checker-design.md  ADR-003-extractor-design.md  ADR-004-detecter-design.md  ADR-005-orchestrator-design.md  ADR-006-models-design.md  ADR-007-schema-design.md
server/: .env.example  README.md  main.py  main_mock.py  mock_detecter.py  mock_extractor.py  requirements.txt  start_server.py  test_server.py
src/analyser/: analyser.py  analyser_fixed.py
src/checker/: checker.py  checker_final.py  checker_fixed.py  checker_fixed_v2.py
src/core/: database.py  metrics.py  models.py
src/detecter/: detecter.py  detecter_fixed.py
src/extractor/: extractor.py  extractor_fixed.py
src/orchestrator/: main.py
tests/: conftest.py  pipeline_tester.py  test_analyser.py  test_async_analyser.py  test_async_checker.py  test_async_extractor.py  test_checker.py  test_detecter.py  test_extractor.py  test_imports.py  test_models.py  test_orchestrator.py  test_schema.py
(+26 files in other folders)
